build/resources/test/LO-2/ValidPrograms/test_30.lo
// *Good testcase*
// Factorial
// main return value: 120
// Author: Fall 2021 TAs

int main() {
    {
     return fact(5);
    }
}

int fact(int a) {
    int b;
    {
      if ((a=0)) {
        b = 1;
      }
      else {
        b = (a * fact((a-1)));
      }
      return b;
    }
}